# dfdecomp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  data.win  run.bat
.github/workflows/: rust.yml
src/: lib.rs  main.rs
